--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -9,6 +9,7 @@ section.section
   include ./contains
   include ./byClass
   include ./byId
+  include ./getEl
   include ./getHostOrParent
   include ./getOffsetParent
   include ./getScrollParent
